--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -129,7 +129,7 @@
   position: relative;
   padding: 8px;
   width: 400px;
-  height: 500px;
+  height: 540px;
   background: rgb(238, 246, 253);
   border-radius: 30px;
 
@@ -146,7 +146,7 @@
   overflow: hidden;
 
   display: grid;
-  grid-template-columns: 6% auto;
+  grid-template-columns: 6% auto 6%;
   padding: 10px;
 }
 .CerrarEditor_Foto {
@@ -164,14 +164,20 @@
   transition: 0.2s ease-in-out;
   cursor: pointer;
 }
-.CerrarEditor_Foto i:hover {
+.CerrarEditor_Foto i:active {
   background: #c8d5da;
+}
+.btnOpenSheet {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .headerEditarHeader h3 {
   text-align: center;
   font-weight: normal;
-  margin-right: 15px;
+  font-size: 20px;
 }
 .foto_Perfil_header {
   height: 85%;
@@ -187,11 +193,28 @@
 }
 .VisualizarFotoPerfil img {
   position: relative;
-  width: 100px;
-  height: 100px;
-  border: 5px solid rgb(244, 247, 250);
+  width: 140px;
+  height: 140px;
+  border: 3px solid rgb(239, 245, 250);
   border-radius: 50%;
   object-fit: cover;
+}
+
+.borderActiveImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  height: 150px;
+  background: transparent;
+  border-radius: 50%;
+
+  transition: 0.3s ease-in;
+  scale: 0.98;
+}
+.borderActiveImg.show {
+  background: #6200ff;
+  scale: 1;
 }
 .Opciones_Perfil {
   display: grid;
@@ -199,7 +222,7 @@
   align-items: center;
   grid-template-columns: repeat(2, auto);
   gap: 40px;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 .opcion_foto_Perfil p,
 .opcion_foto_header p {
@@ -251,6 +274,97 @@
 }
 .btnAceptar button:hover {
   scale: 0.98;
+}
+
+/*btn sheet*/
+.actionSheet {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  z-index: 11;
+
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+  opacity: 0;
+  pointer-events: none;
+}
+.actionSheet.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+.ContenedorSheet {
+  position: absolute;
+  bottom: 0;
+}
+.CajaSheet {
+  position: relative;
+  overflow: hidden;
+}
+.ContentSheet {
+  position: relative;
+  width: 384px;
+  height: 280px;
+
+  background: rgb(191, 197, 206);
+  transform: translateY(100%);
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  transition: 0.4s ease;
+}
+.ContentSheet.active {
+  transform: translateY(0);
+}
+.AccionesAvanzadasEditarFoto {
+  position: relative;
+  background: white;
+  height: 70%;
+  padding: 12px;
+  border-radius: 12px;
+}
+.opcionesEditarfoto {
+  margin-top: 8px;
+  display: grid;
+  grid-template-columns: 5% auto;
+  gap: 10px;
+  padding: 10px 5px;
+  border-radius: 8px;
+  transition: 0.2s ease-in;
+  color: #000;
+  cursor: pointer;
+}
+.opcionesEditarfoto:active {
+  background: rgb(225, 236, 241);
+}
+.opcionesEditarfoto p {
+  font-size: 15px;
+}
+.opcionesEditarfoto i {
+  font-size: 17px;
+  color: #6e6e6e;
+}
+
+.btnCancelarAccionSheet {
+  margin-top: 10px;
+  height: 20%;
+  background: white;
+  border-radius: 12px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btnCancelarAccionSheet button {
+  background: transparent;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  color: #01a2d3;
 }
 /*Editar========================*/
 .headerPerfil {
@@ -707,11 +821,15 @@
     padding: 14px;
 
     height: 100%;
-    background: rgb(238, 246, 253);
+    background: rgb(217, 229, 240);
     border-radius: 0;
   }
   .EditarPerfilHeader {
     background: rgba(255, 255, 255, 0.9);
+  }
+
+  .VisualizarFotoPerfil {
+    padding-top: 60px;
   }
 
   .VisualizarFotoPerfil img {
@@ -722,7 +840,27 @@
     border-radius: 50%;
     object-fit: cover;
   }
+  .ContentSheet {
+    padding: 0 8px;
+  }
+
+  .borderActiveImg {
+    height: 186px;
+    width: 186px;
+  }
+  .borderActiveImg.show {
+    background: #6200ff;
+    scale: 1;
+  }
+  .Opciones_Perfil {
+    margin-top: 60px;
+  }
+
+  .btnAceptar button {
+    padding: 10px 70px;
+  }
   /*Editar========*/
+
   .iconoAjustesheader i {
     font-size: 17px;
     color: #5a5a5ac2;
@@ -730,8 +868,8 @@
 
   .fotoPerfil img {
     margin-top: 20px;
-    height: 110px;
-    width: 110px;
+    height: 120px;
+    width: 120px;
     border: 2px solid rgb(177, 177, 247);
   }
   .nameUserDescrip h2 {
