--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -518,7 +518,7 @@ h5 {
 }
 /*Menu*/
 .nav-main {
-  box-shadow: 0px 0px 8px rgba(199, 199, 199, 0.568);
+  box-shadow: 0px 0px 3px rgba(199, 199, 199, 0.973);
   position: relative;
   height: 99vh;
   margin: 4px;
@@ -1249,7 +1249,7 @@ h5 {
   position: relative;
   padding: 12px;
   border-radius: 8px;
-  box-shadow: 0 0 8px gainsboro;
+  box-shadow: 0 0 3px rgb(204, 204, 204);
   opacity: 1;
   transition: 0.1s ease;
   grid-row: 1 / span 2;
@@ -1805,6 +1805,7 @@ h5 {
     translate: -100%;
   }
 }
+
 @keyframes aparecer {
   from {
     opacity: 0;
