--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -21,7 +21,7 @@ h5 {
 }
 
 /*Avisos del sistema*/
-.msgsConfirmacion {
+.MSGS_SYSTEM_MAIN {
   position: fixed;
   z-index: 90;
   top: 30px;
@@ -53,6 +53,15 @@ h5 {
   opacity: 1;
   transform: translateX(0);
 }
+.contSuccesSystem {
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  height: 25px;
+  width: 25px;
+  background: #000000;
+  border-radius: 50%;
+}
 
 .contentMsg h5 {
   font-size: 15px;
@@ -60,15 +69,62 @@ h5 {
   font-family: "Inter", sans-serif;
 }
 .contentMsg i {
-  height: 22px;
-  width: 22px;
   font-size: 14px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
+}
+
+/*=======================*/
+
+.MSGS_SECOND_INFERIOR {
+  position: fixed;
+  z-index: 90;
+  bottom: 20px;
+  left: 20px;
+  pointer-events: none;
+}
+.contentMsgInferior {
+  z-index: 80;
+  width: auto;
+  max-width: 600px;
+  padding: 14px 16px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 2% auto auto;
+  gap: 25px;
+  align-items: center;
   background: #000000;
   color: white;
+  box-shadow: 0 8px 30px rgb(214, 214, 214);
+  border-radius: 8px;
+  border: 1px solid rgb(189, 186, 186);
+
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(50px);
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.contentMsgInferior.show {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0);
+}
+#IconWifi {
+  display: none;
+}
+#IconWifi.show {
+  display: block;
+}
+
+.contentMsgInferior h5 {
+  font-weight: normal;
+}
+.material-symbols-outlined {
+  color: white;
+  font-size: 15px;
 }
 /*================================*/
 .advertenciaDelete.active {
@@ -2026,7 +2082,7 @@ h5 {
     opacity: 1;
     transform: translateY(0);
   }
-  .msgsConfirmacion {
+  .MSGS_SYSTEM_MAIN {
     position: fixed;
     top: 30px;
     right: auto;
