--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -24,7 +24,7 @@ body {
 
 /*Modo manual*/
 html[data-theme="dark"] {
-  --color-bg: #0a0a0a;
+  --color-bg: rgb(24, 25, 26);
   --color-text: #ffffff;
   --color-primary: #90caf9;
   --card-bg: #1e1e1e;
