--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -36,3 +36,65 @@ html[data-theme="light"] {
   --color-primary: #1e88e5;
   --card-bg: #f5f5f5;
 }
+
+:root {
+  --bg-modal-light: #ffffff;
+  --bg-input-light: #f5f5f5;
+  --bg-footer-light: #ffffff;
+  --border-light: #e0e0e0;
+  --text-light: #000;
+}
+
+/* DARK */
+[data-theme="dark"] {
+  --bg-modal-dark: #232627ff;
+  --bg-input-dark: #8cc7d41e;
+  --bg-footer-dark: #232627ff;
+  --border-dark: #555555;
+  --text-dark: #ffffff;
+}
+
+/* LIGHT */
+
+/* DARK */
+[data-theme="dark"] .cuerpo_modal {
+  background: var(--bg-modal-dark);
+}
+
+[data-theme="dark"] .footer-editar {
+  background: var(--bg-footer-dark);
+}
+
+[data-theme="dark"] .descripcionEditar textarea {
+  background: var(--bg-input-dark);
+  color: var(--text-dark);
+}
+
+[data-theme="dark"] .input-editar input {
+  background: var(--bg-input-dark);
+  color: var(--text-dark);
+}
+
+[data-theme="dark"] .btnEditarProgrmacion {
+  background: #474747;
+}
+
+[data-theme="dark"] .cajaSeccionEditar {
+  box-shadow: 0 0 0 2px var(--border-dark);
+}
+
+[data-theme="dark"] .eliminarTasks {
+  box-shadow: 0 0 0 2px var(--border-dark);
+}
+
+[data-theme="dark"] .opentAviso {
+  background: #ffdedef6;
+}
+[data-theme="dark"] .backgrauEditar {
+  background: rgba(0, 0, 0, 0.356);
+  backdrop-filter: blur(20px);
+}
+
+[data-theme="dark"] .agregar {
+  background: var(--bg-modal-dark);
+}
