--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -259,6 +259,9 @@ h5 {
   text-align: center;
   color: #535353;
 }
+#nameApp {
+  color: #6200ff;
+}
 
 /*animacones de mensages*/
 @keyframes msgSystm {
@@ -280,6 +283,7 @@ h5 {
   display: grid;
   grid-template-columns: auto 40%;
   gap: 10px;
+  background: white;
 }
 
 .tasksProyecAll h2 {
@@ -1291,12 +1295,14 @@ h5 {
   box-shadow: 0 0 3px gainsboro;
   border-radius: 12px;
   grid-row: 1 / span 0;
+  background: white;
 }
 
 /*=====================================*/
 .proyects {
   box-shadow: 0 0 3px gainsboro;
   border-radius: 12px;
+  background: white;
 }
 /*=====================================*/
 .List_check {
@@ -1307,6 +1313,7 @@ h5 {
   opacity: 1;
   transition: 0.1s ease;
   grid-row: 1 / span 2;
+  background: white;
 }
 .List_check.show {
   opacity: 0;
@@ -2232,7 +2239,7 @@ h5 {
     display: none;
   }
   .nav2 {
-    display: block;
+    display: none;
   }
   .nav-main {
     background: white;
@@ -2242,7 +2249,7 @@ h5 {
     z-index: 20;
     position: fixed;
     bottom: 0;
-    height: 66px;
+    height: 48px;
     width: 100%;
     margin: 0;
   }
@@ -2260,15 +2267,17 @@ h5 {
     margin: 4px 0 0 0;
   }
   #Add i {
-    margin-left: 10px;
-    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 
     color: rgb(31, 31, 31);
     margin-bottom: 0;
     padding-bottom: 0;
   }
   .funciones_smart i {
-    font-size: 25px;
+    font-size: 20px;
     color: rgb(31, 31, 31);
     padding-top: 5px;
     margin-bottom: 0;
@@ -2321,9 +2330,12 @@ h5 {
     left: 0;
     z-index: 40;
   }
+  .foto_perfil {
+    padding-left: 4px;
+  }
   .foto_perfil img {
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 35px;
     margin: 2px 0 0 0;
   }
   .Notificaciones i {
