--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -1,8 +1,11 @@
 :root {
-  --color-bg: #f5f7fa;
+  --color-bg: #e9eef7;
   --color-text: #0f172a;
   --color-primary: #1e88e5;
   --card-bg: #f5f5f5;
+  --navBar: rgb(32, 32, 32);
+  --bordes-nav: rgb(53, 53, 53);
+  --blackfondo: #030303;
 }
 
 body {
@@ -24,14 +27,14 @@ body {
 
 /*Modo manual*/
 html[data-theme="dark"] {
-  --color-bg: rgb(24, 25, 26);
+  --color-bg: rgb(32, 32, 32);
   --color-text: #ffffff;
   --color-primary: #90caf9;
   --card-bg: #1e1e1e;
 }
 
 html[data-theme="light"] {
-  --color-bg: #ffffff;
+  --color-bg: #f3f1f8;
   --color-text: #222222;
   --color-primary: #1e88e5;
   --card-bg: #f5f5f5;
@@ -54,11 +57,32 @@ html[data-theme="light"] {
   --text-dark: #ffffff;
 }
 
-/* LIGHT */
-
 /* DARK */
+
+/*Menús*/
+
+[data-theme="dark"] .nav-main {
+  background: var(--blackfondo);
+}
+
+[data-theme="dark"] .funciones_smart i {
+  color: #aaaaaa;
+}
+
+[data-theme="dark"] .funciones_smart p {
+  color: #cacaca;
+}
+
+/*Modal editar*/
 [data-theme="dark"] .cuerpo_modal {
   background: var(--bg-modal-dark);
+  border: 1px solid var(--border-dark);
+}
+
+@media (max-width: 700px) {
+  [data-theme="dark"] .cuerpo_modal {
+    border: 0px solid var(--border-dark);
+  }
 }
 
 [data-theme="dark"] .footer-editar {
@@ -71,12 +95,41 @@ html[data-theme="light"] {
 }
 
 [data-theme="dark"] .input-editar input {
-  background: var(--bg-input-dark);
+  background: transparent;
   color: var(--text-dark);
 }
 
 [data-theme="dark"] .btnEditarProgrmacion {
-  background: #474747;
+  background: #000000;
+  border-color: #8400ff;
+}
+[data-theme="dark"] .btnEditarProgrmacion i {
+  color: #8400ff;
+}
+
+[data-theme="dark"] .contenedor_categoria .options.selected {
+  background-color: #5900ff;
+  color: #f5fdff;
+}
+
+[data-theme="dark"] .contenedor_Editar .options2.selected {
+  background-color: #5900ff;
+  color: #f5fdff;
+}
+
+[data-theme="dark"] .options:hover {
+  background-color: #5900ff;
+}
+[data-theme="dark"] .options2:hover {
+  background-color: #5900ff;
+}
+
+[data-theme="dark"] .options {
+  box-shadow: 0 0 0 1px var(--border-dark);
+}
+
+[data-theme="dark"] .options2 {
+  box-shadow: 0 0 0 1px var(--border-dark);
 }
 
 [data-theme="dark"] .cajaSeccionEditar {
@@ -92,13 +145,16 @@ html[data-theme="light"] {
 }
 [data-theme="dark"] .backgrauEditar {
   background: rgba(0, 0, 0, 0.356);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(10px);
 }
+
+/*Agregar*/
 
 [data-theme="dark"] .agregar {
   background: var(--bg-modal-dark);
 }
 
+/*Mensajes System*/
 [data-theme="dark"] .contentMsg {
   box-shadow: 0 8px 30px rgb(110, 110, 110);
 }
@@ -106,4 +162,53 @@ html[data-theme="light"] {
   box-shadow: 0 8px 30px rgb(34, 34, 34);
   background: var(--bg-modal-dark);
   border: 1px solid grey;
+}
+
+/*Contenedores main*/
+[data-theme="dark"] .Barra_Superior_principal {
+  background: transparent;
+}
+[data-theme="dark"] .grafiaca_progreso {
+  background: rgb(44, 44, 44);
+}
+[data-theme="dark"] .proyects {
+  background: rgb(44, 44, 44);
+}
+[data-theme="dark"] .List_check {
+  background: rgb(44, 44, 44);
+}
+
+@media (max-width: 700px) {
+  [data-theme="dark"] .cuerpo_modal {
+    border: 0px solid var(--border-dark);
+  }
+
+  [data-theme="dark"] .List_check {
+    background: transparent;
+  }
+
+  /*Menús*/
+  [data-theme="dark"] .NavMovil {
+    background: var(--navBar);
+    box-shadow: 0 0 0 2px var(--bordes-nav);
+  }
+
+  [data-theme="dark"] .nav-main {
+    background: var(--navBar);
+    border-top: 2px solid var(--bordes-nav);
+  }
+
+  [data-theme="dark"] .funciones_smart i,
+  .funciones_smart p {
+    color: #ffffff;
+  }
+
+  [data-theme="dark"] #Add i {
+    color: #ffffff;
+  }
+
+  /*Editar*/
+  [data-theme="dark"] .Closeeditar {
+    color: white;
+  }
 }
