--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -2167,6 +2167,7 @@ h5 {
     box-shadow: 0 0 0px rgba(220, 220, 220, 0);
     position: relative;
     overflow: hidden;
+    background: transparent;
   }
   #taskList {
     height: auto;
