--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -40,6 +40,11 @@ html[data-theme="light"] {
   --card-bg: #f5f5f5;
 }
 
+@media (max-width: 700px) {
+  html[data-theme="light"] {
+    --color-bg: #ffffff;
+  }
+}
 :root {
   --bg-modal-light: #ffffff;
   --bg-input-light: #f5f5f5;
@@ -74,6 +79,12 @@ html[data-theme="light"] {
 }
 
 /*Modal editar*/
+
+[data-theme="dark"] .btnCancelarAccionSheet {
+  background: var(--border-dark);
+  margin: 0 15px;
+}
+
 [data-theme="dark"] .cuerpo_modal {
   background: var(--bg-modal-dark);
   border: 1px solid var(--border-dark);
@@ -207,7 +218,7 @@ html[data-theme="light"] {
     color: #ffffff;
   }
 
-  /*Editar*/
+  /*Editar y perfil*/
   [data-theme="dark"] .Closeeditar {
     color: white;
   }
