--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -34,7 +34,7 @@ html[data-theme="dark"] {
 }
 
 html[data-theme="light"] {
-  --color-bg: #f3f1f8;
+  --color-bg: #f5f4f8;
   --color-text: #222222;
   --color-primary: #1e88e5;
   --card-bg: #f5f5f5;
@@ -214,7 +214,7 @@ html[data-theme="light"] {
     color: #ffffff;
   }
 
-  [data-theme="dark"] #Add i {
+  [data-theme="dark"] .openAdd i {
     color: #ffffff;
   }
 
