--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -257,4 +257,17 @@ html[data-theme="light"] {
   [data-theme="dark"] .Closeeditar {
     color: white;
   }
+
+  [data-theme="dark"] .contenidoVisualizarOpciones {
+    background: var(--bg-modal-dark);
+    box-shadow: none;
+  }
+
+  [data-theme="dark"] .listaOpcionesModalVisualizar i {
+    color: #a0a0a0;
+  }
+
+  [data-theme="dark"] .listaOpcionesModalVisualizar p {
+    color: #dfdfdf;
+  }
 }
