--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -89,10 +89,10 @@ h5 {
   z-index: 80;
   width: auto;
   max-width: 700px;
-  padding: 12px 16px;
+  padding: 13px 16px;
   position: relative;
   display: grid;
-  grid-template-columns: 2% auto;
+  grid-template-columns: 2% auto auto;
   gap: 25px;
   align-items: center;
   background: #222222;
@@ -119,10 +119,35 @@ h5 {
 
 .contentMsgInferior h5 {
   font-weight: normal;
+  font-size: 14px;
+}
+.iconMsgInf {
+  font-size: 18px;
 }
 .material-symbols-outlined {
   color: white;
   font-size: 15px;
+}
+.btnCargarPagina {
+  display: none;
+}
+.btnCargarPagina.show {
+  display: block;
+}
+.btnCargarPagina button {
+  border: none;
+  background: transparent;
+  color: #006eff;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  transition: 0.2s ease;
+}
+.btnCargarPagina button:hover {
+  text-decoration: underline;
+}
+.btnCargarPagina button:active {
+  scale: 0.98;
 }
 /*================================*/
 .advertenciaDelete.active {
@@ -2099,7 +2124,7 @@ h5 {
   .MSGS_SECOND_INFERIOR {
     width: 100%;
     left: 0;
-    bottom: 32;
+    bottom: 56px;
     padding: 0 10px;
   }
   .backgraudMsgs,
