Integro nuevo modulo par app

--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -299,4 +299,7 @@ html[data-theme="light"] {
   [data-theme="dark"] .Closeeditar {
     color: white;
   }
+  [data-theme="dark"] .EditarPerfilHeader {
+    background: rgba(0, 0, 0, 0.5);
+  }
 }
