--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -3,8 +3,8 @@
   --color-text: #0f172a;
   --color-primary: #1e88e5;
   --card-bg: #f5f5f5;
-  --navBar: rgb(32, 32, 32);
-  --bordes-nav: rgb(53, 53, 53);
+  --navBar: rgb(9, 9, 10);
+  --bordes-nav: rgb(32, 32, 32);
   --blackfondo: #030303;
 }
 
@@ -43,6 +43,10 @@ html[data-theme="light"] {
 @media (max-width: 700px) {
   html[data-theme="light"] {
     --color-bg: #ffffff;
+  }
+
+  html[data-theme="dark"] {
+    --color-bg: rgb(9, 9, 10);
   }
 }
 :root {
@@ -92,8 +96,11 @@ html[data-theme="light"] {
 [data-theme="dark"] .funciones_smart p {
   color: #cacaca;
 }
-
-/*Modal editar*/
+[data-theme="dark"] #tasksOptions button,
+#tasksOptions button i {
+  color: rgb(190, 190, 190);
+}
+/*Modal editar perfil*/
 [data-theme="dark"] .ContentSheet {
   width: 400px;
 }
@@ -122,8 +129,10 @@ html[data-theme="light"] {
   color: #d3d3d3;
 }
 
+/*Editar tarea*/
+
 [data-theme="dark"] .cuerpo_modal {
-  background: var(--bg-modal-dark);
+  background: black;
   border: 1px solid var(--border-dark);
 }
 
@@ -134,11 +143,12 @@ html[data-theme="light"] {
 }
 
 [data-theme="dark"] .footer-editar {
-  background: var(--bg-footer-dark);
+  background: black;
+  border-top: 0px;
 }
 
 [data-theme="dark"] .descripcionEditar textarea {
-  background: var(--bg-input-dark);
+  background: #01010a;
   color: var(--text-dark);
 }
 
@@ -177,29 +187,31 @@ html[data-theme="light"] {
   box-shadow: 0 0 0 0px var(--border-dark);
   border: 1px solid #2788dd;
   color: white;
-  background: #474747;
+  background: #0c1025;
 }
 
 [data-theme="dark"] .options2 {
   box-shadow: 0 0 0 0px var(--border-dark);
   border: 1px solid #2788dd;
   color: white;
-  background: #474747;
+  background: #0c1025;
 }
 
 [data-theme="dark"] .cajaSeccionEditar {
-  box-shadow: 0 0 0 2px var(--border-dark);
+  box-shadow: 0 0 0 1px var(--bg-footer-dark);
+  background: #18181800;
+  overflow: hidden;
 }
 
 [data-theme="dark"] .eliminarTasks {
-  box-shadow: 0 0 0 2px var(--border-dark);
+  box-shadow: 0 0 0 1px var(--border-dark);
 }
 
 [data-theme="dark"] .opentAviso {
   background: #ffdedef6;
 }
 [data-theme="dark"] .backgrauEditar {
-  background: rgba(0, 0, 0, 0.356);
+  background: rgba(52, 52, 68, 0.26);
   backdrop-filter: blur(10px);
 }
 
@@ -278,12 +290,12 @@ html[data-theme="light"] {
   /*Menús*/
   [data-theme="dark"] .NavMovil {
     background: var(--navBar);
-    box-shadow: 0 0 0 2px var(--bordes-nav);
+    box-shadow: 0 0 0 1px var(--bordes-nav);
   }
 
   [data-theme="dark"] .nav-main {
     background: var(--navBar);
-    border-top: 2px solid var(--bordes-nav);
+    border-top: 1px solid var(--bordes-nav);
   }
 
   [data-theme="dark"] .funciones_smart i,
