--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -7,6 +7,116 @@
   transform: translateX(-100%);
 }
 
+/*Mesajes del sistema de advertencias*/
+
+.WarningMessagesSystem {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 55;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, 0.1);
+  backdrop-filter: blur(8px);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.4s ease;
+}
+.WarningMessagesSystem.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+.contenidoMensaje {
+  position: relative;
+  width: 400px;
+  border-radius: 24px;
+  background: white;
+  overflow: hidden;
+  transform: scale(0.92);
+  transition: 0.4s;
+}
+.contenidoMensaje.show {
+  transform: scale(1);
+}
+.contenidoMensaje h3 {
+  font-family: "Roboto", sans-serif;
+  font-size: 21px;
+}
+.header_Message {
+  background: #f0f1f8;
+  padding: 8px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  height: 120px;
+}
+.iconMessageEmergente {
+  position: relative;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.iconCaja i {
+  width: 60px;
+  height: 60px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background: #3700fd;
+  border-radius: 50%;
+  font-size: 26px;
+  color: white;
+}
+.iconCaja {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 2px solid #7582ff;
+  box-shadow: 0 0 10px #3401eb3f;
+}
+.contenidoMesajeVentana {
+  padding: 20px;
+}
+.info_mensage {
+  padding-top: 5px;
+  padding-bottom: 20px;
+  color: #575757;
+}
+.footer_messageEmergente {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+}
+.footer_messageEmergente button {
+  padding: 12px;
+  border-radius: 25px;
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.2s linear;
+  font-weight: 600;
+}
+.footer_messageEmergente button:active {
+  scale: 0.98;
+}
+.cerrarMensageSystem {
+  background: #f0f1f8;
+}
+
+.eliminarObleto {
+  background: #3700fd;
+  color: white;
+}
 /*Categorias y proridades*/
 .task-pro.styleNinguna {
   background: linear-gradient(40deg, #f2fdfbff, #dffbffff, #c7effcff);
@@ -438,7 +548,7 @@
 .ContentSheet {
   position: relative;
   width: 384px;
-  height: 280px;
+  height: 350px;
 
   background: rgb(191, 197, 206);
   transform: translateY(100%);
@@ -452,7 +562,7 @@
 .AccionesAvanzadasEditarFoto {
   position: relative;
   background: white;
-  height: 74%;
+  height: 80%;
   padding: 12px;
   border-radius: 15px;
 }
@@ -488,7 +598,7 @@
 
 .btnCancelarAccionSheet {
   margin-top: 10px;
-  height: 16%;
+  height: 12%;
   background: white;
   border-radius: 15px;
   display: grid;
